# cepy-dict

./: .gitignore  README.md  pyproject.toml  update-dict.sh
.github/workflows/: publish-to-pypi.yml
src/cepy-dict/: cedict.py
src/cepy_dict/: __init__.py  cedict.py
tests/: test_cedict.py  test_dict.txt
