[project]
name = "cepy-dict"
version = "2025.02.20"
description = "A sleepy Chinese-english dictionary library"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Erik Swanson", email = "theerikswanson@gmail.com"}]
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
